[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control.tres" type="StyleBox" id=1]
[ext_resource path="res://Ui font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://TextEdit.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=2]
resource_name = "Nowa animacja"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Code:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 256 ), Vector2( 1024, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Code:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 264 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Code/TextEdit:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 184 ), Vector2( 1016, 592 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Code/TextEdit:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 24 ), Vector2( 8, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Code/Fullscreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Code/savecode:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.38828e-05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 216 ), Vector2( 0, 216 ), Vector2( 952, 488 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Code/loadcode:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 216 ), Vector2( 952, 528 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Code/Close:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene control" type="Panel" parent="."]
margin_right = 192.0
margin_bottom = 256.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Scene control"]
margin_right = 192.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Scene"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Panel" parent="."]
margin_top = 264.0
margin_right = 192.0
margin_bottom = 520.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Code"]
margin_right = 192.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Code"]
margin_left = 8.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 208.0
custom_styles/normal = SubResource( 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savecode" type="Button" parent="Code"]
margin_top = 216.0
margin_right = 71.9999
margin_bottom = 252.0
custom_fonts/font = ExtResource( 2 )
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadcode" type="Button" parent="Code"]
margin_left = 120.0
margin_top = 216.0
margin_right = 192.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 2 )
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="Code"]
margin_left = 48.0
margin_top = 192.0
margin_right = 144.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Code"]
visible = false
margin_left = 960.0
margin_top = 448.0
margin_right = 1015.0
margin_bottom = 484.0
custom_fonts/font = ExtResource( 2 )
text = "Close"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Savecode" type="FileDialog" parent="."]
margin_right = 329.0
margin_bottom = 130.0
window_title = "Save your code"
resizable = true

[node name="Loadcode" type="FileDialog" parent="."]
margin_right = 329.0
margin_bottom = 130.0
window_title = "Otw√≥rz plik"
resizable = true
mode = 0

[node name="Fullscreen code" type="AnimationPlayer" parent="."]
"anims/Nowa animacja" = SubResource( 2 )
[connection signal="pressed" from="Code/savecode" to="." method="_on_savecode_pressed"]
[connection signal="pressed" from="Code/loadcode" to="." method="_on_loadcode_pressed"]
[connection signal="pressed" from="Code/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Code/Close" to="." method="_on_Close_pressed"]
[connection signal="file_selected" from="Savecode" to="." method="_on_Savecode_file_selected"]
[connection signal="file_selected" from="Loadcode" to="." method="_on_Loadcode_file_selected"]
